[gd_scene load_steps=9 format=3 uid="uid://7j7g4ddab2ld"]

[ext_resource type="Shader" path="res://Cards/Inline.gdshader" id="1_7a84t"]
[ext_resource type="Script" path="res://PlayerInfo.gd" id="2_l2xnl"]
[ext_resource type="Texture2D" uid="uid://boriyr080fonn" path="res://Assets/enemies/images/enemy0.png" id="3_faqf6"]
[ext_resource type="Texture2D" uid="uid://d2ujeq2bgoiui" path="res://Assets/cardParts/background shade.png" id="3_mq316"]
[ext_resource type="FontFile" uid="uid://dfdbbw8l6wpii" path="res://Assets/fonts/Xolonium-Regular.ttf" id="4_2p20e"]
[ext_resource type="PackedScene" uid="uid://byu2duk3fe248" path="res://Bar.tscn" id="5_y2y07"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l5fn1"]
shader = ExtResource("1_7a84t")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/width = null
shader_parameter/pattern = null
shader_parameter/inside = null
shader_parameter/add_margins = null
shader_parameter/onoff = null

[sub_resource type="ShaderMaterial" id="4"]
shader = ExtResource("1_7a84t")
shader_parameter/color = null
shader_parameter/width = null
shader_parameter/pattern = null
shader_parameter/inside = null
shader_parameter/add_margins = null
shader_parameter/onoff = null

[node name="PlayerBase" type="MarginContainer"]
material = SubResource("ShaderMaterial_l5fn1")
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_l2xnl")

[node name="PlayerBackround" type="Sprite2D" parent="."]
material = SubResource("4")
position = Vector2(22, 10)
scale = Vector2(1.9, 1)
texture = ExtResource("3_faqf6")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LifeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LifeLabel" type="HBoxContainer" parent="VBoxContainer/LifeContainer"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/LifeLabel"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="NameContainer" type="MarginContainer" parent="VBoxContainer/LifeContainer/LifeLabel"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/LifeContainer/LifeLabel/NameContainer"]
layout_mode = 2
texture = ExtResource("3_mq316")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/LifeContainer/LifeLabel/NameContainer"]
layout_mode = 2

[node name="Life" type="Label" parent="VBoxContainer/LifeContainer/LifeLabel/NameContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2p20e")
theme_override_font_sizes/font_size = 23
text = "Life"

[node name="RightGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/LifeLabel"]
layout_mode = 2

[node name="RedBarWGaps" type="HBoxContainer" parent="VBoxContainer/LifeContainer"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/RedBarWGaps"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Bar" parent="VBoxContainer/LifeContainer/RedBarWGaps" instance=ExtResource("5_y2y07")]
layout_mode = 2
size_flags_horizontal = 12

[node name="RightGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/RedBarWGaps"]
layout_mode = 2

[node name="GreenBarWGaps" type="HBoxContainer" parent="VBoxContainer/LifeContainer"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/GreenBarWGaps"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Bar" parent="VBoxContainer/LifeContainer/GreenBarWGaps" instance=ExtResource("5_y2y07")]
layout_mode = 2

[node name="RightGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/GreenBarWGaps"]
layout_mode = 2

[node name="BlueBarWGaps" type="HBoxContainer" parent="VBoxContainer/LifeContainer"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/BlueBarWGaps"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Bar" parent="VBoxContainer/LifeContainer/BlueBarWGaps" instance=ExtResource("5_y2y07")]
layout_mode = 2

[node name="RightGap" type="MarginContainer" parent="VBoxContainer/LifeContainer/BlueBarWGaps"]
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
